--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -21,20 +21,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	<scm>
+	
+  <scm>
 		<connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
 		<developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
 		<url>git@github.com:extendedmind/extendedmind.git</url>
 	</scm>
-	<dependencies>
-		<dependency>
-			<groupId>org.extendedmind</groupId>
-			<artifactId>backend</artifactId>
-			<type>test-jar</type>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<developers>
+	
+  <developers>
 		<developer>
 			<id>ttiurani</id>
 			<name>Timo Tiuraniemi</name>
@@ -46,6 +40,65 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<email>jukapeka@gmail.com</email>
 		</developer>
 	</developers>
+  
+  <profiles>
+    
+    <!-- PhantomJS profiles, copied from here: https://github.com/qa/arquillian-phantom-binary -->
+    <!-- NOTE: http://stackoverflow.com/a/12181394 this needs to be in all projects that use PhantomJS as a dependency -->
+    <profile>
+      <id>linux-64-phantomjs</id>
+      <activation>
+        <os>
+          <name>linux</name>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <properties>
+        <phantomjs.url>http://phantomjs.googlecode.com/files/phantomjs-${phantomjs.version}-linux-x86_64.tar.bz2</phantomjs.url>
+        <phantomjs.binary.directory>${project.build.directory}/phantomjs-${phantomjs.version}-linux-x86_64</phantomjs.binary.directory>
+        <platform.classifier>linux-64</platform.classifier>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target name="download-phantomjs">
+                    <get src="${phantomjs.url}" dest="target/phantomjs-linux-64.tar.bz2"
+                      verbose="on" skipexisting="true" />
+                    <bunzip2 src="target/phantomjs-linux-64.tar.bz2"
+                      dest="target/phantomjs-linux-64.tar" />
+                    <untar src="target/phantomjs-linux-64.tar" dest="target" />
+                    <chmod perm="a+x">
+                      <fileset dir="${phantomjs.binary.directory}/bin">
+                        <include name="phantomjs" />
+                      </fileset>
+                    </chmod>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>  
+    </profile>
+  </profiles>
+  
+  <dependencies>
+    <dependency>
+      <groupId>org.jboss.arquillian.extension</groupId>
+      <artifactId>arquillian-phantom-binary</artifactId>  
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  
 	<build>
 		<testSourceDirectory>${project.basedir}/src/main/webapp/test</testSourceDirectory>
 		<plugins>
@@ -95,7 +148,6 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 			<plugin>
 				<groupId>com.github.searls</groupId>
 				<artifactId>jasmine-maven-plugin</artifactId>
-				<version>1.3.1.2</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
@@ -120,6 +172,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 						<include>js/*.js</include>
 						<include>js/controllers/*.js</include>
 					</sourceIncludes>
+          <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
+          <webDriverCapabilities>
+            <phantomjs.binary.path>${phantomjs.binary.directory}/bin/phantomjs</phantomjs.binary.path>
+          </webDriverCapabilities>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -169,6 +225,23 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 									<action>
 										<ignore></ignore>
 									</action>
+								</pluginExecution>
+								<pluginExecution>
+								  <pluginExecutionFilter>
+								    <groupId>
+								      org.apache.maven.plugins
+								    </groupId>
+								    <artifactId>
+								      maven-antrun-plugin
+								    </artifactId>
+								    <versionRange>[1.7,)</versionRange>
+								    <goals>
+								      <goal>run</goal>
+								    </goals>
+								  </pluginExecutionFilter>
+								  <action>
+								    <ignore></ignore>
+								  </action>
 								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
