--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <encoding>UTF-8</encoding>
     <scala.version.short>2.10</scala.version.short>
     <scala.version>${scala.version.short}.1</scala.version>
+    <phantomjs.version>1.9.1</phantomjs.version>
   </properties>
 
   <repositories>
@@ -87,6 +88,12 @@
         <artifactId>backend</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.arquillian.extension</groupId>
+        <artifactId>arquillian-phantom-binary</artifactId>
+        <version>1.9.1</version>
+        <type>jar</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -133,6 +140,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>2.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.7</version>
         </plugin>
       </plugins>
     </pluginManagement>
