--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -1,50 +1,50 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.extendedmind</groupId>
-		<artifactId>frontend</artifactId>
-		<version>0.1-SNAPSHOT</version>
-	</parent>
-	<groupId>org.extendedmind.frontend</groupId>
-	<artifactId>core</artifactId>
-	<packaging>war</packaging>
-	<name>Extended Mind :: Frontend :: Core</name>
-	<description>Extended Mind Frontend Core</description>
-	<url>https://github.com/extendedmind/extendedmind</url>
-	<inceptionYear>2013</inceptionYear>
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.extendedmind</groupId>
+    <artifactId>frontend</artifactId>
+    <version>0.1-SNAPSHOT</version>
+  </parent>
+  <groupId>org.extendedmind.frontend</groupId>
+  <artifactId>core</artifactId>
+  <packaging>war</packaging>
+  <name>Extended Mind :: Frontend :: Core</name>
+  <description>Extended Mind Frontend Core</description>
+  <url>https://github.com/extendedmind/extendedmind</url>
+  <inceptionYear>2013</inceptionYear>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <scm>
-		<connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
-		<developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
-		<url>git@github.com:extendedmind/extendedmind.git</url>
-	</scm>
-	
+    <connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
+    <developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
+    <url>git@github.com:extendedmind/extendedmind.git</url>
+  </scm>
+
   <developers>
-		<developer>
-			<id>ttiurani</id>
-			<name>Timo Tiuraniemi</name>
-			<email>timo.tiuraniemi@iki.fi</email>
-		</developer>
-		<developer>
-			<id>jpsalo</id>
-			<name>JP Salo</name>
-			<email>jukapeka@gmail.com</email>
-		</developer>
-	</developers>
-  
+    <developer>
+      <id>ttiurani</id>
+      <name>Timo Tiuraniemi</name>
+      <email>timo.tiuraniemi@iki.fi</email>
+    </developer>
+    <developer>
+      <id>jpsalo</id>
+      <name>JP Salo</name>
+      <email>jukapeka@gmail.com</email>
+    </developer>
+  </developers>
+
   <profiles>
-    
+
     <!-- PhantomJS profiles, copied from here: https://github.com/qa/arquillian-phantom-binary -->
-    <!-- NOTE: http://stackoverflow.com/a/12181394 this needs to be in all projects that use PhantomJS as a dependency -->
+    <!-- NOTE: http://stackoverflow.com/a/12181394 this needs to be in all 
+      projects that use PhantomJS as a dependency -->
     <profile>
       <id>linux-64-phantomjs</id>
       <activation>
@@ -74,7 +74,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
                       verbose="on" skipexisting="true" />
                     <bunzip2 src="target/phantomjs-linux-64.tar.bz2"
                       dest="target/phantomjs-linux-64.tar" />
-                    <untar src="target/phantomjs-linux-64.tar" dest="target" />
+                    <untar src="target/phantomjs-linux-64.tar"
+                      dest="target" />
                     <chmod perm="a+x">
                       <fileset dir="${phantomjs.binary.directory}/bin">
                         <include name="phantomjs" />
@@ -86,169 +87,160 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
             </executions>
           </plugin>
         </plugins>
-      </build>  
+      </build>
     </profile>
   </profiles>
-  
-  <dependencies>
-    <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-phantom-binary</artifactId>  
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  
-	<build>
-		<testSourceDirectory>${project.basedir}/src/main/webapp/test</testSourceDirectory>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack</id>
-						<phase>generate-test-resources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.extendedmind</groupId>
-									<artifactId>backend</artifactId>
-									<type>test-jar</type>
-									<overWrite>true</overWrite>
-									<outputDirectory>${project.basedir}/src/main/webapp/test/json</outputDirectory>
-									<includes>*.json</includes>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-clean-plugin</artifactId>
-				<configuration>
-					<filesets>
-						<fileset>
-							<directory>${basedir}/src/main/webapp/static/</directory>
-							<includes>
-								<include>em.min.js</include>
-								<include>em.min.css</include>
-							</includes>
-						</fileset>
-						<fileset>
-							<directory>${basedir}/src/main/webapp/test/json</directory>
-						</fileset>
-					</filesets>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.github.searls</groupId>
-				<artifactId>jasmine-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<jsSrcDir>${project.basedir}/src/main/webapp/static</jsSrcDir>
-					<jsTestSrcDir>${project.basedir}/src/main/webapp/test</jsTestSrcDir>
-					<preloadSources>
-						<source>lib/jasmine-jquery.js</source>
-						<source>lib/jsonFixtures.js</source>
-					</preloadSources>
-					<sourceIncludes>
-						<include>lib/jquery/jquery.js</include>
-						<include>lib/angularjs/angular.js</include>
-						<include>lib/angularjs/angular-mocks.js</include>
-						<include>lib/angularjs/angular-resource.js</include>
-						<include>lib/angularjs/angular-cookies.js</include>
-						<include>js/*.js</include>
-						<include>js/controllers/*.js</include>
-					</sourceIncludes>
+
+  <build>
+    <testSourceDirectory>${project.basedir}/src/main/webapp/test</testSourceDirectory>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>unpack</id>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.extendedmind</groupId>
+                  <artifactId>backend</artifactId>
+                  <type>test-jar</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.basedir}/src/main/webapp/test/json</outputDirectory>
+                  <includes>*.json</includes>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${basedir}/src/main/webapp/static/</directory>
+              <includes>
+                <include>em.min.js</include>
+                <include>em.min.css</include>
+              </includes>
+            </fileset>
+            <fileset>
+              <directory>${basedir}/src/main/webapp/test/json</directory>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.github.searls</groupId>
+        <artifactId>jasmine-maven-plugin</artifactId>
+        <extensions>true</extensions>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jsSrcDir>${project.basedir}/src/main/webapp/static</jsSrcDir>
+          <jsTestSrcDir>${project.basedir}/src/main/webapp/test</jsTestSrcDir>
+          <preloadSources>
+            <source>lib/jasmine-jquery.js</source>
+            <source>lib/jsonFixtures.js</source>
+          </preloadSources>
+          <sourceIncludes>
+            <include>lib/jquery/jquery.js</include>
+            <include>lib/angularjs/angular.js</include>
+            <include>lib/angularjs/angular-mocks.js</include>
+            <include>lib/angularjs/angular-resource.js</include>
+            <include>lib/angularjs/angular-cookies.js</include>
+            <include>js/*.js</include>
+            <include>js/controllers/*.js</include>
+          </sourceIncludes>
           <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
           <webDriverCapabilities>
             <phantomjs.binary.path>${phantomjs.binary.directory}/bin/phantomjs</phantomjs.binary.path>
           </webDriverCapabilities>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>ro.isdc.wro4j</groupId>
-				<artifactId>wro4j-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>wro4j-production</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<targetGroups>em.min</targetGroups>
-						</configuration>
-					</execution>
-				</executions>
-				<configuration>
-					<contextFolder>${basedir}/src/main/webapp/static</contextFolder>
-					<wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
-					<destinationFolder>${basedir}/src/main/webapp/static</destinationFolder>
-					<cssDestinationFolder>${basedir}/src/main/webapp/static/</cssDestinationFolder>
-					<jsDestinationFolder>${basedir}/src/main/webapp/static/</jsDestinationFolder>
-				</configuration>
-			</plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only.
-				It has no influence on the Maven build itself.-->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-dependency-plugin</artifactId>
-										<versionRange>[2.8,)</versionRange>
-										<goals>
-											<goal>unpack</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-								  <pluginExecutionFilter>
-								    <groupId>
-								      org.apache.maven.plugins
-								    </groupId>
-								    <artifactId>
-								      maven-antrun-plugin
-								    </artifactId>
-								    <versionRange>[1.7,)</versionRange>
-								    <goals>
-								      <goal>run</goal>
-								    </goals>
-								  </pluginExecutionFilter>
-								  <action>
-								    <ignore></ignore>
-								  </action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>ro.isdc.wro4j</groupId>
+        <artifactId>wro4j-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>wro4j-production</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <targetGroups>em.min</targetGroups>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <contextFolder>${basedir}/src/main/webapp/static</contextFolder>
+          <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
+          <destinationFolder>${basedir}/src/main/webapp/static</destinationFolder>
+          <cssDestinationFolder>${basedir}/src/main/webapp/static/</cssDestinationFolder>
+          <jsDestinationFolder>${basedir}/src/main/webapp/static/</jsDestinationFolder>
+        </configuration>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <!--This plugin's configuration is used to store Eclipse m2e settings 
+          only. It has no influence on the Maven build itself. -->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <versionRange>[2.8,)</versionRange>
+                    <goals>
+                      <goal>unpack</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>
+                      org.apache.maven.plugins
+                    </groupId>
+                    <artifactId>
+                      maven-antrun-plugin
+                    </artifactId>
+                    <versionRange>[1.7,)</versionRange>
+                    <goals>
+                      <goal>run</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
