--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -18,7 +17,7 @@
 
   <licenses>
     <license>
-       <name>GNU Affero General Public License, Version 3</name>
+      <name>GNU Affero General Public License, Version 3</name>
       <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
       <distribution>repo</distribution>
     </license>
@@ -83,18 +82,43 @@
 
   <dependencyManagement>
     <dependencies>
+    
+      <!-- Internal dependencies -->
+      <dependency>
+        <groupId>org.extendedmind</groupId>
+        <artifactId>backend</artifactId>
+        <version>${project.version}</version>
+        <type>jar</type>
+      </dependency>
+      
       <dependency>
         <groupId>org.extendedmind</groupId>
         <artifactId>backend</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
       </dependency>
+      
       <dependency>
-        <groupId>org.jboss.arquillian.extension</groupId>
-        <artifactId>arquillian-phantom-binary</artifactId>
-        <version>1.9.1</version>
-        <type>jar</type>
+        <groupId>org.extendedmind.frontend</groupId>
+        <artifactId>core</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
       </dependency>
+      
+      <!-- Scala -->
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>${scala.version}</version>
+      </dependency>
+      
+      <!-- Test dependencies -->
+      <dependency>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest_${scala.version.short}</artifactId>
+        <version>2.0.M5b</version>
+      </dependency>
+      
     </dependencies>
   </dependencyManagement>
 
@@ -145,6 +169,16 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.7</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.14</version>
+        </plugin>
+        <plugin>
+          <groupId>org.scalatest</groupId>
+          <artifactId>scalatest-maven-plugin</artifactId>
+          <version>1.0-M2</version>
         </plugin>
       </plugins>
     </pluginManagement>
