Working setup for both frontend and backend server for E2E tests

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -7,7 +7,10 @@ extendedmind {
     storeDir = "/tmp/temp-neo-test"
   }
   security {
-    tokenSecret= "0123456789012345"
+    tokenSecret = "0123456789012345"
+  }
+  server {
+    port = 8081
   }
 }
 
