--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,16 @@
         <artifactId>scalatest_${scala.version.short}</artifactId>
         <version>2.0.M5b</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.zeroturnaround</groupId>
+        <artifactId>zt-zip</artifactId>
+        <version>1.6</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.4</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
