--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -85,6 +85,19 @@
       <version>1.0.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.zeroturnaround</groupId>
+      <artifactId>zt-zip</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <profiles>
@@ -263,10 +276,27 @@
           </execution>
         </executions>
         <configuration>
+          <jettyConfig>${project.basedir}/src/test/resources/jetty.xml</jettyConfig>
           <stopKey>testKey</stopKey>
           <stopPort>9999</stopPort>
           <war>${project.build.directory}/core-${project.version}.war</war>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>${jetty.version}</version>
+            <type>jar</type>
+            <scope>runtime</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-rewrite</artifactId>
+            <version>${jetty.version}</version>
+            <type>jar</type>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
