--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -156,6 +156,14 @@
               <addClasspath>true</addClasspath>
             </manifest>
           </archive>
+          <packagingExcludes>
+            index_devel.html,
+            test*/**,
+            WEB-INF/wro.*,
+            static/less*/**,
+            static/js*/**,
+            static/lib/less*/**
+          </packagingExcludes>
         </configuration>
       </plugin>
       <plugin>
@@ -178,10 +186,11 @@
           </preloadSources>
           <sourceIncludes>
             <include>lib/jquery/jquery.js</include>
+            <include>lib/jquery/jquery.cookie.js</include>
             <include>lib/angularjs/angular.js</include>
             <include>lib/angularjs/angular-mocks.js</include>
             <include>lib/angularjs/angular-resource.js</include>
-            <include>lib/angularjs/angular-cookies.js</include>
+            <include>lib/base64.js</include>
             <include>js/*.js</include>
             <include>js/controllers/*.js</include>
           </sourceIncludes>
