--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,7 +39,8 @@
 
   <properties>
     <neo4j.version>2.0.0-M03</neo4j.version>
-    <spray.version>1.2-M8</spray.version>
+    <spray.version>1.2-20130727</spray.version>
+    <akka.version>2.2.0</akka.version>
   </properties>
 
   <dependencies>
@@ -109,7 +110,7 @@
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-slf4j_${scala.version.short}</artifactId>
-      <version>2.2-M3</version>
+      <version>${akka.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -138,6 +139,13 @@
       <groupId>io.spray</groupId>
       <artifactId>spray-testkit</artifactId>
       <version>${spray.version}</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-testkit_${scala.version.short}</artifactId>
+      <version>${akka.version}</version>
       <type>jar</type>
       <scope>test</scope>
     </dependency>
