--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -25,3 +25,10 @@ spray.can.server {
   idle-timeout = 5 s
   request-timeout = 2 s
 }
+
+spray.routing {
+  # Enables/disables more lenient HTTP header parsing
+  # off = illegal HTTP headers are not accepted, an error message is produced
+  # on = illegal HTTP headers are accepted as RawHeaders
+  relaxed-header-parsing = on
+}
