Fixed indentation to 2 spaces

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -1,6 +1,5 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -15,7 +14,7 @@
   <description>Extended Mind Frontend</description>
   <url>https://github.com/extendedmind/extendedmind</url>
   <inceptionYear>2013</inceptionYear>
-  
+
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -28,7 +27,7 @@
     <connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
     <developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
     <url>git@github.com:extendedmind/extendedmind.git</url>
-  </scm>  
+  </scm>
 
   <developers>
     <developer>
@@ -37,9 +36,9 @@
       <email>timo.tiuraniemi@iki.fi</email>
     </developer>
   </developers>
-  
+
   <modules>
     <module>core</module>
   </modules>
-  
+
 </project>
