--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
     <module>backend</module>
     <module>frontend</module>
     <module>e2e</module>
+    <module>?</module>
   </modules>
 
   <build>
