--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-scala</artifactId>
-      <version>0.2.0-M2_${scala.version}-SNAPSHOT</version>
+      <version>0.1-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -147,6 +147,13 @@
       <artifactId>akka-testkit_${scala.version.short}</artifactId>
       <version>${akka.version}</version>
       <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.extendedmind</groupId>
+      <artifactId>neo4j-scala</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
