Intermediate commit to neo4j-uuid

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -96,6 +96,19 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j.app</groupId>
+      <artifactId>neo4j-server</artifactId>
+      <classifier>static-web</classifier>
+      <version>${neo4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-enterprise</artifactId>
+      <version>${neo4j.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- Scaldi -->
     <dependency>
