--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -5,6 +5,7 @@
 extendedmind {
   neo4j {
     storeDir = "/tmp/temp-neo-test"
+    isHighAvailability = false
   }
   security {
     tokenSecret = "0123456789012345"
