Fixed E2E backend not starting with the right database

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -4,7 +4,7 @@
 
 extendedmind {
   neo4j {
-    storeDir = "target/neo-test"
+    storeDir = "target/neo4j-test"
     isHighAvailability = false
     startServer = false
   }
