--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -53,7 +53,6 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>backend</artifactId>
-      <classifier>jar-with-dependencies</classifier>
       <scope>compile</scope>
     </dependency>
 
@@ -299,6 +298,25 @@
         </dependencies>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>prepare</id>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <tasks>
+                <echo message="pre-integration-test phase" />
+                <unzip src="target/neo4j-test.zip" dest="target/neo4j-test" />
+              </tasks>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2.1.jbossorg-3</version>
@@ -311,11 +329,10 @@
           </execution>
         </executions>
         <configuration>
-          <workingDirectory>${project.build.directory}</workingDirectory>
           <executable>java</executable>
           <arguments>
             <argument>-jar</argument>
-            <argument>backend-${project.version}-jar-with-dependencies.jar</argument>
+            <argument>target/backend-${project.version}-jar-with-dependencies.jar</argument>
           </arguments>
           <background>true</background>
           <!-- Poll for backend server to be up and running -->
