Now both login tests call the backend

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
         <groupId>org.extendedmind</groupId>
         <artifactId>backend</artifactId>
         <version>${project.version}</version>
+        <classifier>jar-with-dependencies</classifier>
         <type>jar</type>
       </dependency>
 
