Cleaned up unnecessary println commands, added third test to login, in E2E database should now reinitialized before every file

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -20,6 +20,7 @@ akka {
   log-config-on-start = off
   loglevel = INFO
   loggers = ["akka.event.slf4j.Slf4jLogger"]
+  log-dead-letters = off
 }
 
 # check the reference.conf in spray-can/src/main/resources for all defined settings
