--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -2,11 +2,10 @@
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org</groupId>
-    <artifactId>extendedmind</artifactId>
+    <groupId>org.extendedmind</groupId>
+    <artifactId>root</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
-  <groupId>org.extendedmind</groupId>
   <artifactId>frontend</artifactId>
   <packaging>pom</packaging>
   <name>Extended Mind :: Frontend</name>
