--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -96,6 +96,13 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.extendedmind</groupId>
+      <artifactId>neo4j-timestamp</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.neo4j.app</groupId>
       <artifactId>neo4j-server</artifactId>
       <version>${neo4j.version}</version>
