Converted test data into Properties to make it usable in E2E tests

--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -165,7 +165,7 @@
                   <type>test-jar</type>
                   <overWrite>true</overWrite>
                   <outputDirectory>${project.build.directory}</outputDirectory>
-                  <includes>*.zip</includes>
+                  <includes>*.zip, testData.properties</includes>
                 </artifactItem>
               </artifactItems>
             </configuration>
