Added logging, fixed testData missing

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -19,7 +19,7 @@ extendedmind {
 
 akka {
   log-config-on-start = off
-  loglevel = INFO
+  loglevel = DEBUG
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   log-dead-letters = off
 }
