--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -15,6 +15,17 @@ extendedmind {
   server {
     port = 8081
   }
+  email {
+    mailgun {
+      domain = "ext.md"
+      apiKey = "TEST KEY"
+    }
+    from = "extended mind <info@ext.md>"
+    templates {
+      directory = "target"
+      requestInviteConfirmationTitle = "Extended Mind Beta Signup Successful"
+    }
+  }
 }
 
 akka {
