Changed token secret to Hex encoding

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -10,7 +10,17 @@ extendedmind {
     serverPort = 7473
   }
   security {
-    tokenSecret = "0123456789012345"
+    # HEX encoded 16 bytes
+    tokenSecret = "01234567890123456789012345678901"
+    
+    # Whether it is possible to sign up.
+    signUp = true
+    
+    # Sign up produces ADMIN users
+    # CRITICAL: Set this to false after first 
+    #           admins have been inserted to 
+    #           an empty database!
+    adminSignUp = true
   }
   server {
     port = 8081
