Moved default email templates directly to code base, fixed failing tests, fixed broken email validation

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -32,7 +32,8 @@ extendedmind {
     }
     from = "extended mind <info@ext.md>"
     templates {
-      directory = "target"
+      # Set this to use custom emails 
+      # directory = "custom_email_template_directory"
       requestInviteConfirmationTitle = "Extended Mind Beta Signup Successful"
     }
   }
