Added queue number to email template

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -31,10 +31,13 @@ extendedmind {
       apiKey = "TEST KEY"
     }
     from = "extended mind <info@ext.md>"
+    # Used to create email links
+    urlPrefix = "http://localhost:8081/"
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
       requestInviteConfirmationTitle = "Extended Mind Beta Signup Successful"
+      requestInviteOrderNumberURI = "invite/request"
     }
   }
 }
