Added black font to alert, changed logo color to gray

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -36,7 +36,7 @@ extendedmind {
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
-      requestInviteConfirmationTitle = "Extended Mind Beta Signup Successful"
+      requestInviteConfirmationTitle = "get ready to extend your mind"
       requestInviteOrderNumberURI = "waiting.html?uuid="
     }
   }
