Added default file logging to logs directory

--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -209,6 +209,9 @@
                 <include>phantomjsdriver.log</include>
               </includes>
             </fileset>
+            <fileset>
+              <directory>${basedir}/logs</directory>
+            </fileset>
           </filesets>
         </configuration>
       </plugin>
