Undebugged version of updated security context to include search for collectives

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -21,6 +21,11 @@ extendedmind {
     #           admins have been inserted to 
     #           an empty database!
     adminSignUp = true
+    
+    # Whether new collectives will be readable by all users
+    # CRITICAL: Set this to false after first
+    #           collectives have been added!
+    commonCollectives = true
   }
   server {
     port = 8081
