Undebugged version of invite request accepting

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -36,13 +36,16 @@ extendedmind {
       apiKey = "TEST KEY"
     }
     from = "extended mind <info@ext.md>"
-    # Used to create email links
+    # URL for non-secure and secure pages
     urlPrefix = "http://localhost/landing/"
+    secureUrlPrefix = "http://localhost/"
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
       requestInviteConfirmationTitle = "get ready to extend your mind"
-      requestInviteOrderNumberURI = "waiting.html?uuid="
+      requestInviteOrderNumberURI = "waiting.html?uuid=uuidValue"
+      acceptInviteRequestTitle = "the wait is over"
+      acceptInviteURI = "accept.html?email=emailValue&invite=inviteValue"
     }
   }
 }
