Inviting works, some problem with Mailgun not sending emails from the development machine persists

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -13,7 +13,7 @@ extendedmind {
     # HEX encoded 16 bytes
     tokenSecret = "01234567890123456789012345678901"
     
-    # Whether it is possible to sign up.
+    # Whether it is possible to sign up
     signUp = true
     
     # Sign up produces ADMIN users
@@ -45,7 +45,7 @@ extendedmind {
       requestInviteConfirmationTitle = "get ready to extend your mind"
       requestInviteOrderNumberURI = "waiting.html?uuid=uuidValue"
       acceptInviteRequestTitle = "the wait is over"
-      acceptInviteURI = "accept.html?email=emailValue&invite=inviteValue"
+      acceptInviteURI = "accept/inviteValue"
     }
   }
 }
