--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <encoding>UTF-8</encoding>
     <scala.version.short>2.10</scala.version.short>
-    <scala.version>${scala.version.short}.1</scala.version>
+    <scala.version>${scala.version.short}.3</scala.version>
     <phantomjs.version>1.9.1</phantomjs.version>
     <jetty.version>9.0.4.v20130625</jetty.version>
   </properties>
@@ -67,6 +67,11 @@
       <id>typesafe</id>
       <name>Typesafe repository</name>
       <url>http://repo.typesafe.com/typesafe/releases</url>
+    </repository>
+    <repository>
+      <id>akka.snapshots</id>
+      <name>Akka Snapshots</name>
+      <url>http://repo.akka.io/snapshots/</url>
     </repository>
     <repository>
       <id>spray.io</id>
