--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -13,15 +13,21 @@ extendedmind {
     # HEX encoded 16 bytes
     tokenSecret = "01234567890123456789012345678901"
     
-    # Whether it is possible to sign up
-    signUp = true
+    # Sign up method
+    # Possible values:
+    #   OFF: sign up is not possible at all
+    #   INVITE: sign up is possible with only invite
+    #   ON: sign up is possible with both invite and call to /signup
+    signUpMethod = "ON"
     
-    # Sign up produces ADMIN users
-    # CRITICAL: Set this to false after first 
-    #           admins have been inserted to 
-    #           an empty database!
-    adminSignUp = true
-    
+    # Sign up mode, what kinds of users are created when signing up.
+    # Possible values:
+    #   ADMIN: administrators sign up
+    #   ALFA: alfa testers sign up 
+    #   BETA: beta testers sign up
+    #   NORMAL: normal users sign up
+    signUpMode = "ADMIN"
+
     # Whether new collectives will be readable by all users
     # CRITICAL: Set this to false after first
     #           collectives have been added!
